--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.0.1",
+    "react-toastify": "^10.0.6",
     "sass": "^1.81.0",
     "styled-components": "^6.1.13",
     "three": "^0.170.0"
